--- a/main.css
+++ b/main.css
@@ -19,3 +19,21 @@
   a{
     all: unset;
   }
+
+  .main{
+    height: 100vh;
+    width: 98vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bcard{
+    width: 31.7rem;
+    margin: 1rem;
+  }
+
+  /*Header Styles*/
+
+  .bcard__profile-img{}
