--- a/main.css
+++ b/main.css
@@ -43,3 +43,71 @@
     object-fit: cover;
     object-position: top right;
   }
+
+  /* Body styles  */
+
+  .bcard__body{
+    background-color: #1a1b21;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .bcard__heading-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1.6rem;
+  }
+
+  .bcard__heading-wrapper * + *{
+    margin-top: 5px;
+  }
+
+  .bcard__name{
+    color: #ffffff;
+    font-size: 2.5rem;
+    font-weight: bold;
+    line-height: 30px;
+  }
+
+  .bcard__tittle{
+    color: #f3bf99;
+    font-weight: 400;
+    font-size: 1.28rem;
+  }
+
+  .bcard__btn-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+.bcard__btn{
+  min-width: 11.5rem;
+  height: 3.4rem;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.bcard__btn-icon{
+  margin-right: 1rem;
+  font-size: 1.4rem;  
+}
+
+.bcard__btn--email{
+  border: 1px solid #d1d5db;
+  border-radius: 0.6rem;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.bcard__btn--linkedin{
+  background: #5093e2;
+  color: #ffffff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+}
