--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@
   }
 
   .bcard__heading-wrapper * + *{
-    margin-top: 5px;
+    margin-top: 0.5em;
   }
 
   .bcard__name{
@@ -73,6 +73,12 @@
     font-size: 2.5rem;
     font-weight: bold;
     line-height: 30px;
+  }
+
+  .bcard__title{
+    color: #f3bf99;
+    font-weight: 400;
+    font-size: 1.28rem;
   }
 
   .bcard__tittle{
@@ -110,4 +116,23 @@
   background: #5093e2;
   color: #ffffff;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.bcard__text-wrapper{
+  margin-top: 1.8rem;
+  margin-bottom: 1.8rem;
+}
+
+.bcard__text-wrapper * + *{
+  margin-top: 0.5rem;
+}
+
+.bcard__heading{
+  color: #f5f5f5;
+  font-size: 1.6rem;
+}
+
+.bcard__text{
+  color: grey;
+  font-size: 1.08rem;
 }
